--- a/Calendaurus.API/Calendaurus.API.csproj
+++ b/Calendaurus.API/Calendaurus.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calendaurus.Models\Calendaurus.Models.csproj" />
+    <ProjectReference Include="..\Calendaurus.Services\Calendaurus.Services.csproj" />
+  </ItemGroup>
+
 </Project>
