add openapi package

--- a/Calendaurus.API/appsettings.json
+++ b/Calendaurus.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenandId": "common",
+    "ClientId": "b603f4b4-7b3b-4b3b-8b3b-3b3b3b3b3b3b",
+    "AllowWebApiToBeAuthorizedByACL": "true"
+  },
   "AllowedHosts": "*"
 }
