modify services and controllers to use user authentication

--- a/Calendaurus.API/appsettings.json
+++ b/Calendaurus.API/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenandId": "common",
-    "ClientId": "b603f4b4-7b3b-4b3b-8b3b-3b3b3b3b3b3b",
-    "AllowWebApiToBeAuthorizedByACL": "true"
+    "TenantId": "common",
+    "ClientId": "be8fb141-1de4-47e6-b6eb-83b069827245",
+    "AllowWebApiToBeAuthorizedByACL": true
   },
   "AllowedHosts": "*"
 }
