--- a/Calendaurus.Services/Calendaurus.Services.csproj
+++ b/Calendaurus.Services/Calendaurus.Services.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Calendaurus.Models\Calendaurus.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ical.Net" Version="4.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
