--- a/.github/workflows/main_calendaurus.yml
+++ b/.github/workflows/main_calendaurus.yml
@@ -7,6 +7,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'Calendaurus.API/**'
+      - 'Calendaurus.Models/**'
+      - 'Calendaurus.Services/**'
+      - '.github/workflows/main_calendaurus.yml'
   workflow_dispatch:
 
 jobs:
